module-info for core modules
Signed-off-by: Maxim Nesen <maxim.nesen@oracle.com>